e2e/k8s/development.yml
---
apiVersion: v1
kind: Service
metadata:
  name: e2e-caroster
  labels:
    group: e2e-caroster
    app: Caroster
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    group: e2e-caroster
    app: Caroster
  type: ClusterIP
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: e2e-caroster
spec:
  rules:
    - host: caroster-page.dev.octr.ee
      http:
        paths:
          - backend:
              serviceName: e2e-caroster
              servicePort: 80
            path: /
  tls:
    - secretName: tls-cert
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: e2e-caroster
  labels:
    group: e2e-caroster
    app: Caroster
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      group: e2e-caroster
      app: Caroster
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        group: e2e-caroster
        app: Caroster
    spec:
      containers:
        - name: e2e-caroster
          image: nginx
          imagePullPolicy: Always
          livenessProbe:
            tcpSocket:
              port: 80
          volumeMounts:
            - name: www
              mountPath: /usr/share/nginx/html
      imagePullSecrets:
        - name: reg-gitlab-registry
      volumes:
        - name: www
          persistentVolumeClaim:
            claimName: caroster-dir
---
apiVersion: v1
kind: Namespace
metadata:
  name: caroster-test
